# cpp-toml-playground

./: CMakeLists.txt  README.md
direct/: CMakeLists.txt  direct.cpp  sample.cpp  sample.h
generic/: CMakeLists.txt  generic.cpp
inputs/: sample.toml
